@@ -2,6 +2,7 @@ h1. CHANGELOG
 
 h2. unreleased July 24, 2013
 
+* remove 'protected_attributes' gem for Rails 4.0
 * remove requirement for 'libv8' gem when using 'therubyracer' (contributed by Nicola Lorusso)
 * don't specify assets gem group if using Rails 4 (contributed by jconley88)
 * don't add attr_accessible for Devise in Rails 4 (contributed by jconley88)
